--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ mirror_to_github:
   script:
     - git remote add github https://momin9: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@github.com/Momin9/Chat-app.git
     - git fetch origin
+    - git credential-cache exit
     - git push github --mirror
   only:
     - main  # Adjust branch as needed
